--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.fsryan.example.weatherapp.ui.activities.MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/forecast_list"
+        android:id="@+id/forecastList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
